# default_crewai

./: README.md  pyproject.toml
src/default_crew/: crew.py  main.py
