[project]
name = "default_crew"
version = "0.1.0"
description = "default_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
default_crew = "default_crew.main:run"
run_crew = "default_crew.main:run"
train = "default_crew.main:train"
replay = "default_crew.main:replay"
test = "default_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
